spent an uncomfortably long time adding sort buttons to the table.